# jose

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
src/: auth.rs  chatgpt.rs  clipboard.rs  config.rs  interactive.rs  jwt.rs  log.rs  main.rs  oauth.rs  prompt.rs  provider.rs  shell.rs
src/interactive/: input.rs  mod.rs  render.rs  selection.rs  state.rs
