[package]
name = "jose"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json", "blocking", "native-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8.8"
sha2 = "0.10"
base64 = "0.22"
rand = "0.10.0"
jsonwebtoken = "10.3.0"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
urlencoding = "2"
dirs = "6.0.0"
anyhow = "1"
thiserror = "2.0.18"
atty = "0.2"
