[package]
name = "jose"
version = "0.1.3"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "blocking", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.10.0"
arboard = { version = "3", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
open = "5"
urlencoding = "2"
dirs = "6.0.0"
anyhow = "1"
